<resources>
    <string name="app_name">Incubator</string>
    <string name="profile_label">Profil Unggas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!---->
    <string name="nama">Nama</string>
    <string name="temp">Temperatur (C)</string>
    <string name="moist">Kelembapan (%)</string>
    <string name="timer">Timer</string>
    <string name="t_incubation">Masa Inkubasi (Hari)</string>
    <string name="t_rotate">Masa Membalik Telur (Hari)</string>
    <string name="add_unggas">Tambah Unggas Baru</string>
    <string name="masukkan_nama">Masukkan Nama Unggas</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="t_incubation_form">Masukkan Lamanya Proses Inkubasi</string>
    <string name="t_rotation_form">Masukkan Lamanya Pembalikan Telur</string>
    <string name="tambah_unggas_button">Tambah Profile Unggas</string>
    <string name="rotation_cycle">Siklus Pembalikan Telur (Jam)</string>
    <string name="rotation_cycle_form">Masukkan Siklus Pembalikan Telur</string>
    <string name="add_unggas_description">Untuk Menambah Jenis Unggas Baru</string>
    <string name="start_incubation">Mulai Inkubasi Baru</string>
    <string name="start_incubation_description">Untuk Memulai Proses Inkubasi</string>
    <string name="gambar_unggas">Gambar Unggas</string>
    <!--Form Inkubasi-->
    <string name="nama_inkubasi_baru">Nama Inkubasi</string>
    <string name="tanggal_inkubasi">Tanggal Mulai Inkubasi</string>
    <string name="jenis_unggas">Jenis Unggas</string>
    <string name="tombol_mulai_inkubasi">Mulai Inkubasi</string>
    <string name="form_nama_inkubasi">Masukkan Nama</string>
    <string name="form_tanggal_inkubasi">DD/MM/YYYY</string>
    <string name="form_jenis_unggas">Pilih Jenis Unggas</string>
    <string name="form_jumlah_telur">Masukkan Jumlah Telur</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!--Layar Stop Inkubasi -->
    <string name="nama_inkubasi">Nama</string>
    <string name="tanggal_inkubasi_">Tanggal Mulai</string>
    <string name="jumlah_telur">Jumlah Telur :</string>
    <string name="temperatur_inkubator">Temperatur</string>
    <string name="selesai_inkubasi">Inkubasi Selesai</string>
    <string name="kelembapan">Kelembapan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Layar Edit dan hapus Profile -->
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>

    <string name="divider1">Pengaturan Suhu dan Kelembapan</string>
    <string name="divider2">Pengaturan Pembalikan Rak Telur</string>
    <string name="jadwal1">Jadwal Pertama</string>
    <string name="jadwal2">Jadwal Kedua</string>
    <string name="jadwal3">Jadwal Ketiga</string>
    <string name="jam">Jam</string>
    <string name="menit">Menit</string>
    <string name="tanggal">Tanggal</string>
    <string name="awal_pembalikan">Tanggal Awal Pembalikan</string>
    <string name="akhir_pembalikan">Tanggal Akhir Pembalikan</string>
    <string name="bulan">Bulan</string>
    <string name="tahun">Tahun</string>
    <string name="m_screen">Layar Monitoring Inkubasi</string>
    <string name="no_incubation">Tidak Ada Proses Inkubasi Yang Sedang Berjalan</string>

    <!-- CardView -->
    <string name="namaCV">Nama Inkubasi :</string>
    <string name="tanggalCV">Tanggal Mulai :</string>
    <string name="tempCV">Temperatur :</string>
    <string name="moistCV">Kelembapan :</string>
    <string name="m_inkubasi">Masa Inkubasi (Hari) :</string>
    <string name="j_unggas">Jenis Unggas :</string>
    <string name="t_inkubasi">Tanggal Mulai</string>
    <string name="j_telur">Jumlah Telur</string>
    <string name="menetas">Menetas</string>
    <string name="gagal">Gagal</string>
    <string name="inkubasi">Inkubasi</string>
    <string name="unggas">Unggas</string>
    <string name="mulai">Mulai</string>
    <string name="telur">Telur</string>
    <string name="durasi">Durasi(Hari)</string>
</resources>
