<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cardview_border"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardview_border"
        android:padding="10dp">

        <TextView
            android:id="@+id/maxTempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/namaTextView"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/minTempTextView"
            android:layout_toRightOf="@+id/minTempTextView"
            android:text="@string/temp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/gambar_unggas"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/namaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@+id/imageView4"
            android:layout_toRightOf="@+id/imageView4"
            android:text="@string/nama" />

        <TextView
            android:id="@+id/minTempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/namaTextView"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/imageView4"
            android:layout_toRightOf="@+id/imageView4"
            android:text="@string/temp" />

        <TextView
            android:id="@+id/moistTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/minTempTextView"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/imageView4"
            android:layout_toRightOf="@+id/imageView4"
            android:text="@string/moist" />

        <TextView
            android:id="@+id/incubationTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moistTextView"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/imageView4"
            android:layout_toRightOf="@+id/imageView4"
            android:text="@string/t_incubation" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>